ADD: ユーザ情報を取得するAPIの作成
